--- a/JungholmInstruments/JungholmInstruments.csproj
+++ b/JungholmInstruments/JungholmInstruments.csproj
@@ -25,5 +25,6 @@
       <PrivateAssets Condition="'$(Configuration)' != 'Debug'">All</PrivateAssets>
     </PackageReference>
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.1" />
+    <PackageReference Include="Supabase" Version="1.1.1" />
   </ItemGroup>
 </Project>
