Add application icon to project and update window icons
- Set the application icon in the project file to jungholm-logo.ico.
- Updated LoginView and MainWindow to use the new application icon for consistency.

--- a/JungholmInstruments/JungholmInstruments.csproj
+++ b/JungholmInstruments/JungholmInstruments.csproj
@@ -7,6 +7,7 @@
     <AvaloniaUseCompiledBindingsByDefault>true</AvaloniaUseCompiledBindingsByDefault>
     <RootNamespace>JungholmInstruments</RootNamespace>
     <AssemblyName>JungholmInstruments</AssemblyName>
+    <ApplicationIcon>Assets\jungholm-logo.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
